--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,7 @@ build-iPhoneSimulator/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+#
+# ciara scrects 
+# glcoud creds etc.
+deploy-pipeline-poc-*.json
